# DeepSDF-and-3D-EPN

./: README.md  pyproject.toml
exercise_3/data/: shape_implicit.py  shapenet.py  shapenet_zip.py
exercise_3/data/splits/sofas/: overfit.txt  train.txt
exercise_3/inference/: infer_3depn.py  infer_deepsdf.py
exercise_3/model/: deepsdf.py  threedepn.py
exercise_3/runs/3_2_deepsdf_overfit/: latent_best.ckpt
exercise_3/training/: train_3depn.py  train_deepsdf.py
exercise_3/util/: mesh_collection_to_gif.py  misc.py  model.py
src/data/: shape_implicit.py  shape_info.json  shapenet.py  shapenet_zip.py
src/data/splits/shapenet/: overfit.txt  val.txt
src/data/splits/sofas/: val.txt
src/inference/: infer_3depn.py  infer_deepsdf.py
src/model/: deepsdf.py  threedepn.py
src/runs/3_2_deepsdf_generalization/: latent_best.ckpt
src/training/: train_3depn.py  train_deepsdf.py
src/util/: mesh_collection_to_gif.py  visualization.py
